# yardstick

./: CMakeLists.txt  EventManager.cpp  EventManager.h  README.md  WindowTracker.cpp  WindowTracker.h  main.cpp
Managers/: EventManager.cpp  EventManager.h
Trackers/: ActiveWindowTracker.cpp  ActiveWindowTracker.h  NetworkActivityTracker.cpp  NetworkActivityTracker.h
UI/: TrackerWindow.cpp  TrackerWindow.h
